Fix slider behind image

--- a/src/myStyles.scss
+++ b/src/myStyles.scss
@@ -137,7 +137,7 @@ border-radius: 3px;
         flex-direction: column;
         position: absolute;
         top: 15px;
-        z-index: 200;
+        z-index: 600;
         text-decoration: none;
         color: $color-black;
 
@@ -363,6 +363,7 @@ border-radius: 3px;
   height: 100%;
   align-self: flex-end;
   background-color: transparent;
+  z-index: 500;
 }
 
 .slider-box.right {
